--- a/README.rdoc
+++ b/README.rdoc
@@ -6,3 +6,6 @@ It is designed tol..asf
 
 This is a new line of text in my Readme.
 My name is Peter and I love coding!
+
+
+An edit that Jamie made
